@@ -13,7 +13,6 @@ installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 
 diag = +Test2::Tools::JSON::Pointer
-diag = +Importer
 
 [RemovePrereqs]
 remove = strict
@@ -29,7 +28,6 @@ remove = Plack::Test
 
 ; optional
 remove = Test2::Tools::JSON::Pointer
-remove = Importer
 
 [Prereqs]
 Plack = 0
