@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dep on Inport for :short tag
 
 0.03      2018-05-22 13:19:13 -0400
   - documentation fixes
